@@ -197,4 +197,11 @@
                   original="moveBelow"
                   replacement=".patch_viewletmanager.moveBelow" />
 
+    <!-- Patch plone.app.redirector to also redirect direct file download links (e.g. at_download/fileField) when
+         the containing object defines an alias -->
+    <monkey:patch description="Fix plone.app.redirector to properly redirect for at_download links"
+                  class="plone.app.redirector.storage.RedirectionStorage"
+                  original="get"
+                  replacement=".patch_plone_app_redirector.RedirectionStorage_get" />
+
 </configure>
